--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -45,7 +45,7 @@
   text-align: center;
   margin: 0;
   font-weight: bold;
-  font-style: normal;
+  /* font-style: normal; */
   font-family: 'Raleway', sans-serif;
 }
 
