--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,11 +1,13 @@
 .slide {
-  height: 280px;
-  width: 260px;
-  margin-right: 30px;
+  height: 268px;
+  width: 83px;
+  margin-right: 0;
+  border-top: 4px solid rgb(246, 230, 222);
+  border-right: 195px solid rgb(246, 230, 222);
 }
 
 .title {
-  width: 290px;
+  width: 287px;
   background-color: rgb(246, 230, 222);
   text-align: left;
   font-weight: bold;
@@ -18,8 +20,8 @@
 .slide-container {
   display: flex;
   flex-direction: row;
-  height: 260px;
-  width: 300px;
+  height: 268px;
+  width: 280px;
   background-color: rgb(246, 230, 222);
   margin-right: 0;
 }
@@ -29,18 +31,24 @@
   border: 0;
   margin: 0;
   font-size: 20px;
-  height: 278px;
+  height: 276px;
 }
 
 .slide-img {
   height: 210px;
-  width: 125px;
-  margin: 10px;
+  width: 132px;
+  margin: 3px;
   margin-bottom: 0;
 }
 
 .slide-text {
   text-align: center;
   margin: 0;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
   font-weight: bold;
+}
+
+.button-icon {
+  margin-bottom: 35px;
 }
