my title and text input field is centered

--- a/client/src/components/TextArea/TextArea.css
+++ b/client/src/components/TextArea/TextArea.css
@@ -13,6 +13,14 @@
 }
 
 .text-box {
-  /* display: flex; */
-  /* justify-content: center; */
+  display: flex;
+  flex-direction: column;
+}
+
+.label {
+  align-self: center;
+}
+
+.text {
+  align-self: center;
 }
